added createExceptionString method, and fixed test